# teenyarray

./: .gitignore  API.md  AUXDOCS.md  CMakeLists.txt  DOCS.md  LIBRARY.md  Makefile  README.md
docs/: DOCS.md  auxillary-docs.md  design.md  developer-docs.md  python-api.md
python/: array.ipynb  setup.py  test.py
python/notebooks/: array.ipynb  c-style-array-behavior.ipynb  example.ipynb  magicmethods.ipynb  test-arrayscalar-v1.ipynb  test-bindings.ipynb
python/notebooks/test-bindings/: test-arrayscalar-v1.ipynb  test-dtype-v1.ipynb  test-stuff-old.ipynb
python/teenyarray.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: arrayscalar.cpp  core.cpp  dtypes.cpp  pybind-example-v2.cpp  pybind-example.cpp  tarray-experiment-v1.cpp  tarray.cpp  tarray.hpp  vector.cpp
src/scratch/: arrayscalar.cpp  hello-world.cpp  old-core.cpp  practice-classes.cpp  tarray-experiment-v1.cpp  tarray-experiment-v2.cpp  tarray.cpp
src/scratch/polymorphism/: dtype-poly-v1.cpp  function-overloading-v1.cpp  operator-ovverloading-v1.cpp  runtime-function-overriding-v1.cpp  virtual-function-v1.cpp
src/scratch/templating/: class-templates-v1.cpp
src/v0/: core.cpp  dtypes.hpp  tarray.hpp
